--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,10 +27,9 @@
   height: 100%;
   top: 0;
 }
-/* assets/images/grid.svg */
 .main:after {
   content: "";
-  background-image: url("/public/assets/images/grid.svg");
+  background-image: url("/assets/images/grid.svg");
   z-index: 1;
   position: absolute;
   width: 100%;
@@ -40,11 +39,11 @@
   filter: invert(1);
 }
 
-.gradient {
+.light-gradient {
   height: fit-content;
   z-index: 3;
   width: 100%;
-  max-width: 640px;
+  /* max-width: 640px; */
   background-image: radial-gradient(
       at 27% 37%,
       hsla(215, 98%, 61%, 1) 0px,
@@ -56,6 +55,7 @@
     radial-gradient(at 97% 96%, hsla(38, 60%, 74%, 1) 0px, transparent 50%),
     radial-gradient(at 33% 50%, hsla(222, 67%, 73%, 1) 0px, transparent 50%),
     radial-gradient(at 79% 53%, hsla(343, 68%, 79%, 1) 0px, transparent 50%);
+  
   position: absolute;
   content: "";
   width: 100%;
@@ -63,6 +63,20 @@
   filter: blur(100px) saturate(150%);
   top: 80px;
   opacity: 0.15;
+}
+.dark-gradient {
+  height: -moz-fit-content;
+  height: fit-content;
+  z-index: 3;
+  /* max-width: 640px; */
+  background-image: radial-gradient( at 27% 37%, hsl(215deg 11.32% 25.6%) 0px, transparent 0% ), radial-gradient(at 97% 21%, hsl(0deg 0% 0%) 0px, transparent 50%), radial-gradient(at 52% 99%, hsl(0deg 0% 0%) 0px, transparent 50%), radial-gradient(at 10% 29%, hsl(0deg 0% 0%) 0px, transparent 50%), radial-gradient(at 97% 96%, hsl(38deg 46.1% 24.25%) 0px, transparent 50%), radial-gradient(at 33% 50%, hsl(222deg 100% 50%) 0px, transparent 50%), radial-gradient(at 79% 53%, hsl(0deg 0% 0%) 0px, transparent 50%);
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  filter: blur(0px) saturate(130%);
+  top: 0px;
+  opacity: 1;
 }
 
 @media screen and (max-width: 640px) {
@@ -102,7 +116,7 @@
 }
 
 .desc {
-  @apply mt-5 text-lg text-gray-600 sm:text-xl max-w-2xl;
+  @apply mt-5 text-lg text-slate-400 sm:text-xl max-w-2xl;
 }
 
 .search_input {
